parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> expression
Rule 1     expression -> expr
Rule 2     expr -> terme
Rule 3     expr -> expr PLUS expr2
Rule 4     expr -> expr MOINS expr2
Rule 5     expr -> expr2
Rule 6     expr2 -> expr2 FOIS expr3
Rule 7     expr2 -> expr2 DIV expr3
Rule 8     expr2 -> expr3
Rule 9     expr3 -> terme POW expr3
Rule 10    expr3 -> terme
Rule 11    terme -> NOMBRE
Rule 12    terme -> LPAREN expr RPAREN

Terminals, with rules where they appear

DIV                  : 7
FOIS                 : 6
LPAREN               : 12
MOINS                : 4
NOMBRE               : 11
PLUS                 : 3
POW                  : 9
RPAREN               : 12
error                : 

Nonterminals, with rules where they appear

expr                 : 1 3 4 12
expr2                : 3 4 5 6 7
expr3                : 6 7 8 9
expression           : 0
terme                : 2 9 10

Parsing method: LALR

state 0

    (0) S' -> . expression
    (1) expression -> . expr
    (2) expr -> . terme
    (3) expr -> . expr PLUS expr2
    (4) expr -> . expr MOINS expr2
    (5) expr -> . expr2
    (11) terme -> . NOMBRE
    (12) terme -> . LPAREN expr RPAREN
    (6) expr2 -> . expr2 FOIS expr3
    (7) expr2 -> . expr2 DIV expr3
    (8) expr2 -> . expr3
    (9) expr3 -> . terme POW expr3
    (10) expr3 -> . terme

    NOMBRE          shift and go to state 5
    LPAREN          shift and go to state 6

    expression                     shift and go to state 1
    expr                           shift and go to state 2
    terme                          shift and go to state 3
    expr2                          shift and go to state 4
    expr3                          shift and go to state 7

state 1

    (0) S' -> expression .



state 2

    (1) expression -> expr .
    (3) expr -> expr . PLUS expr2
    (4) expr -> expr . MOINS expr2

    $end            reduce using rule 1 (expression -> expr .)
    PLUS            shift and go to state 8
    MOINS           shift and go to state 9


state 3

    (2) expr -> terme .
    (9) expr3 -> terme . POW expr3
    (10) expr3 -> terme .

  ! reduce/reduce conflict for PLUS resolved using rule 2 (expr -> terme .)
  ! reduce/reduce conflict for MOINS resolved using rule 2 (expr -> terme .)
  ! reduce/reduce conflict for $end resolved using rule 2 (expr -> terme .)
  ! reduce/reduce conflict for RPAREN resolved using rule 2 (expr -> terme .)
    PLUS            reduce using rule 2 (expr -> terme .)
    MOINS           reduce using rule 2 (expr -> terme .)
    $end            reduce using rule 2 (expr -> terme .)
    RPAREN          reduce using rule 2 (expr -> terme .)
    POW             shift and go to state 10
    FOIS            reduce using rule 10 (expr3 -> terme .)
    DIV             reduce using rule 10 (expr3 -> terme .)

  ! PLUS            [ reduce using rule 10 (expr3 -> terme .) ]
  ! MOINS           [ reduce using rule 10 (expr3 -> terme .) ]
  ! $end            [ reduce using rule 10 (expr3 -> terme .) ]
  ! RPAREN          [ reduce using rule 10 (expr3 -> terme .) ]


state 4

    (5) expr -> expr2 .
    (6) expr2 -> expr2 . FOIS expr3
    (7) expr2 -> expr2 . DIV expr3

    PLUS            reduce using rule 5 (expr -> expr2 .)
    MOINS           reduce using rule 5 (expr -> expr2 .)
    $end            reduce using rule 5 (expr -> expr2 .)
    RPAREN          reduce using rule 5 (expr -> expr2 .)
    FOIS            shift and go to state 11
    DIV             shift and go to state 12


state 5

    (11) terme -> NOMBRE .

    POW             reduce using rule 11 (terme -> NOMBRE .)
    PLUS            reduce using rule 11 (terme -> NOMBRE .)
    MOINS           reduce using rule 11 (terme -> NOMBRE .)
    $end            reduce using rule 11 (terme -> NOMBRE .)
    FOIS            reduce using rule 11 (terme -> NOMBRE .)
    DIV             reduce using rule 11 (terme -> NOMBRE .)
    RPAREN          reduce using rule 11 (terme -> NOMBRE .)


state 6

    (12) terme -> LPAREN . expr RPAREN
    (2) expr -> . terme
    (3) expr -> . expr PLUS expr2
    (4) expr -> . expr MOINS expr2
    (5) expr -> . expr2
    (11) terme -> . NOMBRE
    (12) terme -> . LPAREN expr RPAREN
    (6) expr2 -> . expr2 FOIS expr3
    (7) expr2 -> . expr2 DIV expr3
    (8) expr2 -> . expr3
    (9) expr3 -> . terme POW expr3
    (10) expr3 -> . terme

    NOMBRE          shift and go to state 5
    LPAREN          shift and go to state 6

    expr                           shift and go to state 13
    terme                          shift and go to state 3
    expr2                          shift and go to state 4
    expr3                          shift and go to state 7

state 7

    (8) expr2 -> expr3 .

    FOIS            reduce using rule 8 (expr2 -> expr3 .)
    DIV             reduce using rule 8 (expr2 -> expr3 .)
    PLUS            reduce using rule 8 (expr2 -> expr3 .)
    MOINS           reduce using rule 8 (expr2 -> expr3 .)
    $end            reduce using rule 8 (expr2 -> expr3 .)
    RPAREN          reduce using rule 8 (expr2 -> expr3 .)


state 8

    (3) expr -> expr PLUS . expr2
    (6) expr2 -> . expr2 FOIS expr3
    (7) expr2 -> . expr2 DIV expr3
    (8) expr2 -> . expr3
    (9) expr3 -> . terme POW expr3
    (10) expr3 -> . terme
    (11) terme -> . NOMBRE
    (12) terme -> . LPAREN expr RPAREN

    NOMBRE          shift and go to state 5
    LPAREN          shift and go to state 6

    expr2                          shift and go to state 14
    expr3                          shift and go to state 7
    terme                          shift and go to state 15

state 9

    (4) expr -> expr MOINS . expr2
    (6) expr2 -> . expr2 FOIS expr3
    (7) expr2 -> . expr2 DIV expr3
    (8) expr2 -> . expr3
    (9) expr3 -> . terme POW expr3
    (10) expr3 -> . terme
    (11) terme -> . NOMBRE
    (12) terme -> . LPAREN expr RPAREN

    NOMBRE          shift and go to state 5
    LPAREN          shift and go to state 6

    expr2                          shift and go to state 16
    expr3                          shift and go to state 7
    terme                          shift and go to state 15

state 10

    (9) expr3 -> terme POW . expr3
    (9) expr3 -> . terme POW expr3
    (10) expr3 -> . terme
    (11) terme -> . NOMBRE
    (12) terme -> . LPAREN expr RPAREN

    NOMBRE          shift and go to state 5
    LPAREN          shift and go to state 6

    terme                          shift and go to state 15
    expr3                          shift and go to state 17

state 11

    (6) expr2 -> expr2 FOIS . expr3
    (9) expr3 -> . terme POW expr3
    (10) expr3 -> . terme
    (11) terme -> . NOMBRE
    (12) terme -> . LPAREN expr RPAREN

    NOMBRE          shift and go to state 5
    LPAREN          shift and go to state 6

    expr3                          shift and go to state 18
    terme                          shift and go to state 15

state 12

    (7) expr2 -> expr2 DIV . expr3
    (9) expr3 -> . terme POW expr3
    (10) expr3 -> . terme
    (11) terme -> . NOMBRE
    (12) terme -> . LPAREN expr RPAREN

    NOMBRE          shift and go to state 5
    LPAREN          shift and go to state 6

    expr3                          shift and go to state 19
    terme                          shift and go to state 15

state 13

    (12) terme -> LPAREN expr . RPAREN
    (3) expr -> expr . PLUS expr2
    (4) expr -> expr . MOINS expr2

    RPAREN          shift and go to state 20
    PLUS            shift and go to state 8
    MOINS           shift and go to state 9


state 14

    (3) expr -> expr PLUS expr2 .
    (6) expr2 -> expr2 . FOIS expr3
    (7) expr2 -> expr2 . DIV expr3

    PLUS            reduce using rule 3 (expr -> expr PLUS expr2 .)
    MOINS           reduce using rule 3 (expr -> expr PLUS expr2 .)
    $end            reduce using rule 3 (expr -> expr PLUS expr2 .)
    RPAREN          reduce using rule 3 (expr -> expr PLUS expr2 .)
    FOIS            shift and go to state 11
    DIV             shift and go to state 12


state 15

    (9) expr3 -> terme . POW expr3
    (10) expr3 -> terme .

    POW             shift and go to state 10
    FOIS            reduce using rule 10 (expr3 -> terme .)
    DIV             reduce using rule 10 (expr3 -> terme .)
    PLUS            reduce using rule 10 (expr3 -> terme .)
    MOINS           reduce using rule 10 (expr3 -> terme .)
    $end            reduce using rule 10 (expr3 -> terme .)
    RPAREN          reduce using rule 10 (expr3 -> terme .)


state 16

    (4) expr -> expr MOINS expr2 .
    (6) expr2 -> expr2 . FOIS expr3
    (7) expr2 -> expr2 . DIV expr3

    PLUS            reduce using rule 4 (expr -> expr MOINS expr2 .)
    MOINS           reduce using rule 4 (expr -> expr MOINS expr2 .)
    $end            reduce using rule 4 (expr -> expr MOINS expr2 .)
    RPAREN          reduce using rule 4 (expr -> expr MOINS expr2 .)
    FOIS            shift and go to state 11
    DIV             shift and go to state 12


state 17

    (9) expr3 -> terme POW expr3 .

    FOIS            reduce using rule 9 (expr3 -> terme POW expr3 .)
    DIV             reduce using rule 9 (expr3 -> terme POW expr3 .)
    PLUS            reduce using rule 9 (expr3 -> terme POW expr3 .)
    MOINS           reduce using rule 9 (expr3 -> terme POW expr3 .)
    $end            reduce using rule 9 (expr3 -> terme POW expr3 .)
    RPAREN          reduce using rule 9 (expr3 -> terme POW expr3 .)


state 18

    (6) expr2 -> expr2 FOIS expr3 .

    FOIS            reduce using rule 6 (expr2 -> expr2 FOIS expr3 .)
    DIV             reduce using rule 6 (expr2 -> expr2 FOIS expr3 .)
    PLUS            reduce using rule 6 (expr2 -> expr2 FOIS expr3 .)
    MOINS           reduce using rule 6 (expr2 -> expr2 FOIS expr3 .)
    $end            reduce using rule 6 (expr2 -> expr2 FOIS expr3 .)
    RPAREN          reduce using rule 6 (expr2 -> expr2 FOIS expr3 .)


state 19

    (7) expr2 -> expr2 DIV expr3 .

    FOIS            reduce using rule 7 (expr2 -> expr2 DIV expr3 .)
    DIV             reduce using rule 7 (expr2 -> expr2 DIV expr3 .)
    PLUS            reduce using rule 7 (expr2 -> expr2 DIV expr3 .)
    MOINS           reduce using rule 7 (expr2 -> expr2 DIV expr3 .)
    $end            reduce using rule 7 (expr2 -> expr2 DIV expr3 .)
    RPAREN          reduce using rule 7 (expr2 -> expr2 DIV expr3 .)


state 20

    (12) terme -> LPAREN expr RPAREN .

    POW             reduce using rule 12 (terme -> LPAREN expr RPAREN .)
    PLUS            reduce using rule 12 (terme -> LPAREN expr RPAREN .)
    MOINS           reduce using rule 12 (terme -> LPAREN expr RPAREN .)
    $end            reduce using rule 12 (terme -> LPAREN expr RPAREN .)
    FOIS            reduce using rule 12 (terme -> LPAREN expr RPAREN .)
    DIV             reduce using rule 12 (terme -> LPAREN expr RPAREN .)
    RPAREN          reduce using rule 12 (terme -> LPAREN expr RPAREN .)

WARNING: 
WARNING: Conflicts:
WARNING: 
WARNING: reduce/reduce conflict in state 3 resolved using rule (expr -> terme)
WARNING: rejected rule (expr3 -> terme) in state 3
